# AE759-Final-Project

./: CMakeLists.txt  README.md  graph.py  rectangle_test.wp
models/iris_with_plugin/: model.config  model.sdf
models/iris_with_standoffs/: model.sdf
models/qr_code_0_-10/: model.config  model.sdf
models/qr_code_0_-10/materials/scripts/: qr.material
models/qr_code_0_-2/: model.config  model.sdf
models/qr_code_0_-2/materials/scripts/: qr.material
models/qr_code_0_-3/: model.config  model.sdf
models/qr_code_0_-3/materials/scripts/: qr.material
models/qr_code_0_-4/: model.config  model.sdf
models/qr_code_0_-4/materials/scripts/: qr.material
models/qr_code_0_-6/: model.config  model.sdf
models/qr_code_0_-6/materials/scripts/: qr.material
models/qr_code_0_-8/: model.config  model.sdf
models/qr_code_0_-8/materials/scripts/: qr.material
models/qr_code_0_0/: model.config  model.sdf
models/qr_code_0_0/materials/scripts/: qr.material
models/qr_code_0_10/: model.config  model.sdf
models/qr_code_0_10/materials/scripts/: qr.material
models/qr_code_0_2/: model.config  model.sdf
models/qr_code_0_2/materials/scripts/: qr.material
models/qr_code_0_3/: model.config  model.sdf
models/qr_code_0_3/materials/scripts/: qr.material
models/qr_code_0_4/: model.config  model.sdf
models/qr_code_0_4/materials/scripts/: qr.material
models/qr_code_0_6/: model.config  model.sdf
models/qr_code_0_6/materials/scripts/: qr.material
models/qr_code_0_8/: model.config  model.sdf
models/qr_code_0_8/materials/scripts/: qr.material
models/qr_code_2_-10/: model.config  model.sdf
models/qr_code_2_-10/materials/scripts/: qr.material
models/qr_code_2_10/: model.config  model.sdf
models/qr_code_2_10/materials/scripts/: qr.material
models/qr_code_4_-10/: model.config  model.sdf
models/qr_code_4_-10/materials/scripts/: qr.material
models/qr_code_4_10/: model.config  model.sdf
models/qr_code_4_10/materials/scripts/: qr.material
models/qr_code_6_-10/: model.config  model.sdf
models/qr_code_6_-10/materials/scripts/: qr.material
models/qr_code_6_-2/: model.config  model.sdf
models/qr_code_6_-2/materials/scripts/: qr.material
models/qr_code_6_-4/: model.config  model.sdf
models/qr_code_6_-4/materials/scripts/: qr.material
models/qr_code_6_-6/: model.config  model.sdf
models/qr_code_6_-6/materials/scripts/: qr.material
models/qr_code_6_-8/: model.config  model.sdf
models/qr_code_6_-8/materials/scripts/: qr.material
models/qr_code_6_0/: model.config  model.sdf
models/qr_code_6_0/materials/scripts/: qr.material
models/qr_code_6_10/: model.config  model.sdf
models/qr_code_6_10/materials/scripts/: qr.material
models/qr_code_6_2/: model.config  model.sdf
models/qr_code_6_2/materials/scripts/: qr.material
models/qr_code_6_4/: model.config  model.sdf
models/qr_code_6_4/materials/scripts/: qr.material
models/qr_code_6_6/: model.config  model.sdf
models/qr_code_6_6/materials/scripts/: qr.material
models/qr_code_6_8/: model.config  model.sdf
models/qr_code_6_8/materials/scripts/: qr.material
models/wireless_transmitter/: model.config  model.sdf
src/: FinalProjectPlugin.cpp
src/final_project_plugin/: ArduPilotInterface.cpp  Camera.cpp  EKF.cpp  FinalProjectPlugin.cpp  Logger.cpp  Motors.cpp  SimWirelessReceiver.cpp
world/: final-project.sdf
